[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/Item.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.2528
height = 28.0607

[node name="Item" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.879646
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="player_chicken_thigh_pickup" from="." to="." method="_on_Item_player_chicken_thigh_pickup"]
[connection signal="player_hit_cucumber" from="." to="." method="_on_Item_player_hit_cucumber"]
[connection signal="player_pillow_pickup" from="." to="." method="_on_Item_player_pillow_pickup"]
[connection signal="player_pressed_button" from="." to="." method="_on_Item_player_pressed_button"]
[connection signal="player_wool_ball_pickup" from="." to="." method="_on_Item_player_wool_ball_pickup"]
